yaml/istio/jwtfile/product-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-destination-rules
  namespace: shoppingportal    
spec:
  host: "*.shoppingportal.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL    
  subsets: 
  - name: stable
    labels:
      version: v1
  - name: canary
    labels:
      version: v2
